2005-10-14  Al Riddoch  <alriddoch@zepler.org>

	* Release 0.3.6, interface version 4.0.0.

2006-10-12  Al Riddoch  <alriddoch@zepler.org>

	* sasproto.h, skpoll.cpp, skpoll.h, skserver.cpp, skserver.h,
	  skserver_unix.h, sksocket.cpp, sksocket.h, skstream.cpp,
	  skstream.h, skstream_unix.h: Update the copyright statements
	  with current maintainer.

2006-10-12  Al Riddoch  <alriddoch@zepler.org>

	* acinclude.m4: Fix quoting in autoconf macros.

2006-10-11  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Add check for gai_strerror, as it is missing on some
	  platforms, particularly windows. Specify the Windows API version
	  as 0x501 so we get the XP features.

	* skstream/skstream.cpp, skstream/skserver.cpp: Provide a version
	  of gai_strerror() on platforms that use getaddrinfo, but don't
	  have it.

2006-10-10  Al Riddoch  <alriddoch@zepler.org>

	* skstream/sksocket.cpp: startup() on win32 can no longer use
	  LastError member, as its now static. Use a local instead.

2006-04-01  Al Riddoch  <alriddoch@zepler.org>

	* skstream/sksocket.h, skstream/sksocket.cpp: Move base socket
	  class into its own file, and move some code common to server
	  and stream sockets into this class.

	* skstream/skstream.h, skstream/skstream.cpp: Get rid of peer
	  addresses in socket buffer class, and only add it to the
	  datagram socket buffer class, as its meaningless in stream
	  sockets. Add new base class for datagram iostream classes
	  with peer related functionality. Add functionality to
	  bind datagram sockets to a local address and port.

	* skstream/skserver.h, skstream/skserver_unix.h, skstream/skserver.cpp:
	  Clean up server sockets, relying more on functionality in socket
	  base class, and getting rid of obsolete code.

	* configure.ac: Increment version and interface version.

2005-12-02  James Turner  <james@worldforge.org>

	* Add X-Code 2.0 project file (ProjectBuilder project will be deleted
	  shortly).
